[gd_scene load_steps=12 format=3 uid="uid://g1g4wymaj3"]

[ext_resource type="Script" path="res://components/creatures/small_creature.gd" id="1_gp88o"]
[ext_resource type="Script" path="res://components/creatures/squash_area.gd" id="2_q5che"]
[ext_resource type="Texture2D" uid="uid://hinpfsjc1lrx" path="res://assets/slimer.png" id="3_y4h2i"]
[ext_resource type="Texture2D" uid="uid://dp65dl4glmri4" path="res://assets/slime_puddle.png" id="4_4w3kr"]
[ext_resource type="Script" path="res://components/creatures/on_squash_spawn_experience.gd" id="5_2j81u"]
[ext_resource type="PackedScene" uid="uid://cbewjcjypn3x3" path="res://components/creatures/squashable.tscn" id="6_i40bh"]
[ext_resource type="PackedScene" uid="uid://dyxa3r6n74rba" path="res://components/audio/play_once_in_parent.tscn" id="8_wv3xw"]
[ext_resource type="PackedScene" uid="uid://dqd1d8b8eocnr" path="res://components/audio/pop.tscn" id="9_jgak8"]
[ext_resource type="Script" path="res://components/creatures/on_paddle_entered_slime.gd" id="9_o40e2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e74sq"]
radius = 13.1529

[sub_resource type="CircleShape2D" id="CircleShape2D_2mfcv"]
radius = 53.0377

[node name="slimer" type="RigidBody2D"]
gravity_scale = 0.0
continuous_cd = 2
script = ExtResource("1_gp88o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_e74sq")

[node name="squash_area" type="Area2D" parent="."]
priority = 17
script = ExtResource("2_q5che")

[node name="CollisionShape2D" type="CollisionShape2D" parent="squash_area"]
shape = SubResource("CircleShape2D_2mfcv")

[node name="Creature" type="Sprite2D" parent="."]
rotation = -1.57079
texture = ExtResource("3_y4h2i")

[node name="on_squash_spawn_experience" type="Node2D" parent="."]
script = ExtResource("5_2j81u")

[node name="Squashable" parent="." instance=ExtResource("6_i40bh")]
corpse_texture = ExtResource("4_4w3kr")

[node name="sound" parent="Squashable" instance=ExtResource("8_wv3xw")]

[node name="Pop" parent="Squashable/sound" instance=ExtResource("9_jgak8")]

[node name="on_paddle_entered_slime" type="Node2D" parent="."]
script = ExtResource("9_o40e2")

[connection signal="body_entered" from="squash_area" to="squash_area" method="_on_body_entered"]
[connection signal="body_exited" from="squash_area" to="squash_area" method="_on_body_entered"]
